<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#2196F3"
        android:gravity="center"
        android:text="@string/post_your_ad_here"
        android:textColor="#FFF"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:gravity="center"/>

        <EditText
            android:id="@+id/txtName"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round"
            android:gravity="center"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:gravity="center"/>

        <EditText
            android:id="@+id/txtTitle"
            android:hint="@string/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round"
            android:gravity="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/district"
            android:textColor="@color/black"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_district"
                android:hint="@string/select_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/contact_number"
            android:textColor="@color/black"
            android:gravity="center"/>

        <EditText
            android:id="@+id/txtNumber"
            android:hint="@string/contact_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round"
            android:gravity="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/category"
            android:textColor="@color/black"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_category"
                android:hint="@string/select_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/price"
            android:textColor="@color/black"
            android:gravity="center"/>

        <EditText
            android:id="@+id/txtPrice"
            android:hint="@string/price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round"
            android:gravity="center"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/condition"
            android:textColor="@color/black"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_condition"
                android:hint="@string/select_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/images"
            android:textColor="@color/black"
            android:gravity="center"/>

            <ImageView
                android:id="@+id/upload_img"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:gravity="center"/>

            <EditText
                android:id="@+id/txtDescription"
                android:hint="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round"
                android:inputType="textMultiLine"
                android:lines="6"
                android:gravity="center"
                android:overScrollMode="always"
                android:scrollbars="vertical"
                android:scrollbarStyle="insideInset"
                android:scrollHorizontally="false"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="50dp"
                android:text="@string/post"
                android:textSize="21sp"
                android:textAllCaps="false"
                android:backgroundTint="#0059b3"
                android:gravity="center"
                android:id="@+id/btnPost"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:text="@string/back"
                android:textSize="21sp"
                android:textAllCaps="false"
                android:backgroundTint="#ffcc99"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/btnBack"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>